--- a/homework17_react/src/index.css
+++ b/homework17_react/src/index.css
@@ -5,9 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: bisque;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.contact {
+  margin: 20px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  border: 1px solid rgb(75, 68, 68);
+  margin: 10px;
+  width: 250px;
+  border-radius: 5px;
+  text-align: center;
+  background-color: rgb(138, 135, 132);
 }
