--- a/homework17_react/src/index.css
+++ b/homework17_react/src/index.css
@@ -29,4 +29,9 @@ li {
   border-radius: 5px;
   text-align: center;
   background-color: rgb(138, 135, 132);
+  cursor: pointer;
+}
+
+li:hover {
+  background-color: rgb(85, 83, 82);
 }
